<resources>
    <string name="app_name">Journal App</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Display Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confir">Repeat Password</string>
    <string name="action_sign_up">Create Account</string>
    <string name="action_sign_in_short">Log in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_journal_entries">JournalEntries</string>
    <string name="title_activity_entry_detail">EntryDetail</string>

    <string name="create_account_msg">No account yet? Create one</string>
    <string name="login_msg">Already a member? Login</string>

    <string name="search">Search</string>
    <string name="share_entry">Share</string>
    <string name="settings">Settings</string>
    <string name="signout">SignOut</string>

    <string name="clientUID">client_uid</string>
    <string name="clientDisplayName">display_name</string>
    <string name="clientEmail">email_addr</string>
    <string name="entryID">entry_id</string>

    <string name="entry_title">entryTitle</string>
    <string name="entry_content">entryContent</string>
    <string name="entry_date">entryDate</string>
    <string name="entry_priority">entryPriority</string>
    <string name="client_uid">clientUid</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <string name="pref_display_name">pref_display_name</string>
    <string name="pref_email">pref_email_addr</string>
    <string name="pref_password">pref_password</string>
    <string name="pref_sync_frequency">sync_frequency</string>

    <!-- Example General settings -->
    <string name="pref_header_general">Account</string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_email">Email Address</string>
    <string name="pref_default_email">example@example.com</string>

    <string name="pref_title_password">Password</string>
    <string name="pref_default_password">***********</string>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>On App Start</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
