<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="pref_display_name"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />

    <EditTextPreference
        android:defaultValue="@string/pref_default_email"
        android:key="pref_email_addr"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_email" />

    <EditTextPreference
        android:defaultValue="@string/pref_default_password"
        android:key="pref_password"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_password" />


</PreferenceScreen>
