<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_username"
            android:textColor="@color/iron"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/editTextUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:textColorLink="@color/white"
            app:backgroundTint="@color/white"
            android:hint="Chosen Username"
            android:inputType="text" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_email"
            android:textColor="@color/iron"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/editTextEmailSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="Email Address"
            android:inputType="textEmailAddress"
            android:textColorLink="@color/white"
            app:backgroundTint="@color/white" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_password"
            android:textColor="@color/iron"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="5dp" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/editTextPassSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:textColorLink="@color/white"
            app:backgroundTint="@color/white"
            android:hint="Password"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_password_confir"
            android:textColor="@color/iron"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="5dp" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/editTextPassSignupConf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:textColorLink="@color/white"
            app:backgroundTint="@color/white"
            android:hint="Password Confirmation"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp" />

        <Button
            android:id="@+id/btn_create_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_sign_up"
            android:background="@drawable/btn_round_edge"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="5dp" />

        <TextView
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="35dp"
            android:text="@string/login_msg"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="15sp" />

    </LinearLayout>
</ScrollView>